--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "uuid": "^9.0.0"
   }
 }
